--- a/css/main.css
+++ b/css/main.css
@@ -111,6 +111,8 @@ span{
 	background-image: url(../image/chat-panel-bg.png);
 	background-repeat: repeat; 
 	background-color: #EDE9E4;
+	position: absolute;
+	width: 98%;
 }
 .message{
 	border-radius: 5px;
@@ -134,6 +136,9 @@ span{
 .input-form{
 	padding: 0.4em;
 	border-top: 0.5px solid silver;
+	position: absolute;
+    top: 29.5em;
+    width: 98%;
 }
 .input-message input{
 	width: 90%;
@@ -158,29 +163,9 @@ span{
 	background-color: #EEEEEE;
 }
 
-/*.scrollbar
-{
-	float: left;
-	background: #F5F5F5;
-	overflow-y: scroll;
-	width: 100%;
+.scrollbar{
+	overflow: hidden;
+    overflow-y: scroll;
+    height: 80vh;
+    max-height: 38em;
 }
-#style-4::-webkit-scrollbar-track
-{
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-	background-color: #F5F5F5;
-}
-
-#style-4::-webkit-scrollbar
-{
-	width: 6px;
-	background-color: #cacaca;
-}
-
-#style-4::-webkit-scrollbar-thumb
-{
-	background-color: #cacaca;
-}
-.bck-trsp{
-	background: transparent;
-}*/
